<resources>
    <string name="app_name">Carbs Calc</string>
    <string name="title_portion_carbs">Carbs In Portion</string>
    <string name="portion_weight">Portion weight</string>
    <string name="portion_weight_label">Portion weight:</string>
    <string name="carbs_in_100_g">Carbs in 100 g</string>
    <string name="carbs_in_portion">Carbs in portion</string>
    <string name="carbs_in_portion_label">Carbs in portion:</string>
    <string name="g">g</string>
    <string name="this_value_cant_be_greater_than_100">This value can\'t be greater than 100</string>
    <string name="wrong_number_format">Wrong number format</string>
    <string name="this_value_cant_be_lower_than_0">This value can\'t be lower than 0</string>
    <string name="this_value_cant_be_0">This value can\'t be 0</string>
    <string name="carbohydrates_unit">Carbohydrates Unit</string>
    <string name="carbohydrate_units">Carbohydrate units</string>
    <string name="grams">Grams</string>
    <string name="settings">Settings</string>
    <string name="calculations">Calculations</string>
    <string name="carbohydrate_units_value" translatable="false">carbohydrate_units_value</string>
    <string name="grams_value" translatable="false">grams_value</string>
    <string name="carb_units">carb units</string>
    <string name="about">About</string>
    <string name="about_description">This app was created to help diabetics in their daily carb counting routine.</string>
    <string name="about_linking">Icons by\u0020</string>
    <string name="icons8_link" translatable="false"><a href="https://icons8.com">Icons8</a></string>
    <string name="developer_label">Developer:\u0020</string>
    <string name="app_developer" translatable="false">Franciszek Bogulak</string>
    <string name="version_label">Version:\u0020</string>
    <string name="app_version" translatable="false">1.1.0</string>
    <string name="slice_of_bread_and_calc_with_two_rounded_arrows">Slice of bread and calc with two rounded arrows</string>
    <string name="add_to_meal">Add To Meal</string>
    <string name="carbs_in_meal_label">Carbs in meal:</string>
    <string name="reset_meal">Reset Meal</string>
    <string name="carbohydrates_unit_key" translatable="false">carbohydrate_units_key</string>
    <string name="unit_category_key" translatable="false">unit_category_key</string>
    <string name="portion_weight_description">My scale shows:</string>
    <string name="portion_carbs_description">I want to eat:</string>
    <string name="carbs_in_100g_description">My product\'s label says it contains:</string>
    <string name="slice_of_bread_icon">Slice of bread icon</string>
    <string name="kitchen_scale_icon">Kitchen scale icon</string>
    <string name="fork_and_knife_icon">Fork and knife icon</string>
</resources>