<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/about_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/material_on_background_emphasis_high_type"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/about_description_text"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title_text" />

            <TextView
                android:id="@+id/icons8_label_text"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_linking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/version_label" />

            <TextView
                android:id="@+id/icons8_link_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/icons8_link"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/icons8_label_text"
                app:layout_constraintStart_toEndOf="@+id/icons8_label_text" />

            <TextView
                android:id="@+id/developer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/developer_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_description_text"
                style="@style/text_normal" />

            <TextView
                android:id="@+id/developer_text"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_developer"
                app:layout_constraintBaseline_toBaselineOf="@+id/developer_label"
                app:layout_constraintStart_toEndOf="@+id/developer_label" />

            <TextView
                android:id="@+id/version_label"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/version_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_label" />

            <TextView
                android:id="@+id/version_text"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                app:layout_constraintBaseline_toBaselineOf="@+id/version_label"
                app:layout_constraintStart_toEndOf="@+id/version_label" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/slice_of_bread_and_calc_with_two_rounded_arrows"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bread_and_calc"
                app:tint="?attr/colorPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>